spacing fix in container

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ img {
 body {
     height: 100vh;
     font-family: 'Montserrat', sans-serif;
-    font-size: clamp(0.875rem, 0.6549rem + 0.9390vw, 1.5rem);
+    font-size: clamp(0.875rem, 0.5669rem + 1.3146vw, 1.75rem);
     font-weight: 500;
     line-height: 1.9;
     letter-spacing: .15vw;
@@ -154,7 +154,7 @@ button:focus {
 @media (min-width: 750px) {
     .split {
         display: flex;
-        gap: var(--gap-lg);
+        gap: 2em;
         height: 100%;
         width: 100vw;
     }
@@ -173,27 +173,31 @@ button:focus {
     .container {
         /* --gap: 2em; */
         display: flex;
+        justify-content: space-evenly;
         gap: var(--gap);
         flex: 1 1 50%;
-        width: 90vw;
+        width: 95vw;
         margin-inline: auto;
-        margin-right: var(--gap-lg);
+        margin-right: 2em;
     }
-    .product {
+    .product-name,
+    .product,
+    .description,
+    .pricing,
+    .sale-price,
+    .price,
+    button {
+        margin: 0;
+    }
+    /* .product {
         margin-top: var(--gap);
-    }
-    .pricing {
-        margin-top: 5em;
-    }
+    } */
     .price {
         text-decoration-line: line-through !important;
     }
     button {
         margin-bottom: var(--gap);
     }
-    /* .attribution {
-        margin-bottom: var(--gap);
-    } */
 
     @media (min-width: 1800px) {
         .price {
